- Fixed handling upload error when sending pm as email
- Fixed properly stripping <script> tags when in multiline or encoded content
- Fixed grid filtering regression introduced in 3.6.11 for international characters
- Added "reset course progress for all users" option
- "maximum users" restrictions handling is more user-friendly

=== Version 3.6.11 build 15059 ===
- Updated SCORM debug mode to be set from the configuration and log to the console (instead of alert)
- Properly escaped LMS-to-SCORM communication
- A file not found (404) header is sent for missing files
- Members logged in through a specific branch url are only viewing their organization's Org chart part
- Excluded login block and installation form from CSRF filtering
- Fixed file requests overlapping with branch urls in certain cases
- Fixed user profile page showing an error when updating and there's a files white list set
- Fixed projects list not appearing in student's dashboard
- Fixed percentages in "Adjust questions" options to correctly calculate total questions

=== Version 3.6.11 build 14713 ===
- Added ability for professor to create courses/lessons
- Added RTL theme
- Added global CSRF protection
- Added functionallity of multiple comments in project page
- Added datepicker option in complete for all students in progress
- Added code to handle 'New comment' info to dashboard in projects
- Added test failure notification
- Added checkSpam functionality for denying access to IPs that use outside forms (contact,sign up, reset password) very often
- Added option to deactivate users after five contiguous unsuccessful login atempts
- Added option for professor to allow users to repeat test
- Added option about module_itself in custom user types, to disallow sub-type users from accessing modules
- Added option for changing completion date in courses
- Added check for mysql reserved words in custom user field creation